' Generated by UML Generator
' Encoded: XPF1QiCm38RlVWeVjvN0pc6CxXWej3HFuDeYCqlbO3bZREpTPoUnQoSRkmIZN_xqIrRsv8HruxLdzAPn45PSkUm5qOjpLbz61uqqsEfFu8_iLIlWKblP0sDJ5ZyReUWCD1Wau5-CyufG30Eeaz7egEO7JUwfpMBF8Qdodrq7BXVexlwFz1sjC_yjub7lHYls7PtcwcoqDr8uRT1VNquXQgpkD8g-GGKVDM_GGGSsA4Cl93IgvgqV3NPv6n4mTN231Tz9sfQB7cV6CIySGBVIWLFAlxiiWQVPRq0bnu4Kuwj-DXEBDfTf-RCR5THScV7YDs2Q87QRO9h9SY7KJ-eqaIYiaQNzGuHl0KdP6CYQA5VJL5Mn0gpOXmUlfdVR0oh_H_m0
' URL: http://www.plantuml.com/plantuml/uml/XPF1QiCm38RlVWeVjvN0pc6CxXWej3HFuDeYCqlbO3bZREpTPoUnQoSRkmIZN_xqIrRsv8HruxLdzAPn45PSkUm5qOjpLbz61uqqsEfFu8_iLIlWKblP0sDJ5ZyReUWCD1Wau5-CyufG30Eeaz7egEO7JUwfpMBF8Qdodrq7BXVexlwFz1sjC_yjub7lHYls7PtcwcoqDr8uRT1VNquXQgpkD8g-GGKVDM_GGGSsA4Cl93IgvgqV3NPv6n4mTN231Tz9sfQB7cV6CIySGBVIWLFAlxiiWQVPRq0bnu4Kuwj-DXEBDfTf-RCR5THScV7YDs2Q87QRO9h9SY7KJ-eqaIYiaQNzGuHl0KdP6CYQA5VJL5Mn0gpOXmUlfdVR0oh_H_m0
' Generated on: 2026-05-25T15:52:42.530492700

@startuml

class RoadsResponse {
  -snappedPoints: List<SnappedPoint>
  --
  +getSnappedPoints(): List<SnappedPoint>
  +setSnappedPoints(snappedPoints: List<SnappedPoint>): void
}

class SnappedPoint {
  -location: Location
  -originalIndex: Integer
  -placeId: String
  --
  +getLocation(): Location
  +setLocation(location: Location): void
  +getOriginalIndex(): Integer
  +setOriginalIndex(originalIndex: Integer): void
  +getPlaceId(): String
  +setPlaceId(placeId: String): void
}

class Location {
  -latitude: double
  -longitude: double
  --
  +getLatitude(): double
  +setLatitude(latitude: double): void
  +getLongitude(): double
  +setLongitude(longitude: double): void
}

RoadsResponse o-- SnappedPoint
SnappedPoint *-- Location
@enduml